--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,3 +35,4 @@ jobs:
 
       # run tests!
       - run: yarn test
+      - run: yarn chromatic test --app-code=2b0l8fxtoe3 --exit-zero-on-changes
