--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@storybook/addon-storysource": "^5.2.6",
     "@storybook/addons": "^5.2.6",
     "@storybook/react": "^5.2.6",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "storybook-chromatic": "^3.4.0"
   }
 }
