--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,13 @@
 # Javascript Node CircleCI 2.0 configuration file
 #
-# Check https://circleci.com/docs/2.0/language-javascript/ for more details
+# Check https://circleci.com/docs/2.0/language-javnodeascript/ for more details
 #
 version: 2
 jobs:
   build:
     docker:
       # specify the version you desire here
-      - image: circleci/node:8.10.0
+      - image: circleci/node:12.13.1
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
