--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public",
-    "chromatic": "CHROMATIC_APP_CODE=2b0l8fxtoe3 chromatic"
+    "chromatic": "CHROMATIC_APP_CODE=2b0l8fxtoe3 chromatic",
+    "build-storybook-docs": "build-storybook -s public --docs"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,12 +36,15 @@
     ]
   },
   "devDependencies": {
+    "@storybook/addon-a11y": "^5.2.6",
     "@storybook/addon-actions": "^5.2.6",
+    "@storybook/addon-docs": "^5.2.6",
     "@storybook/addon-knobs": "^5.2.6",
     "@storybook/addon-links": "^5.2.6",
     "@storybook/addon-storysource": "^5.2.6",
     "@storybook/addons": "^5.2.6",
     "@storybook/react": "^5.2.6",
+    "babel-loader": "^8.0.6",
     "prettier": "^1.19.1",
     "storybook-chromatic": "^3.4.0"
   }
