--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,3 +36,8 @@ jobs:
       # run tests!
       - run: yarn test
       - run: yarn chromatic test --app-code=2b0l8fxtoe3 --exit-zero-on-changes
+      - run: |
+          if [ $CIRCLE_BRANCH = "master" ]
+          then
+            yarn release
+          fi
