--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "learnstorybook-design-system",
+  "name": "partypete25-learnstorybook-design-system",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
     "polished": "^3.4.2",
     "prop-types": "^15.7.2",
@@ -11,14 +10,20 @@
     "styled-components": "^4.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 9009 -s public",
+    "build": "BABEL_ENV=production babel src -d dist",
     "build-storybook": "build-storybook -s public",
+    "build-storybook-docs": "build-storybook -s public --docs",
     "chromatic": "CHROMATIC_APP_CODE=2b0l8fxtoe3 chromatic",
-    "build-storybook-docs": "build-storybook -s public --docs"
+    "eject": "react-scripts eject",
+    "release": "auto shipit",
+    "start": "react-scripts start",
+    "storybook": "start-storybook -p 9009 -s public",
+    "test": "react-scripts test"
+  },
+  "babel": {
+    "presets": [
+      "react-app"
+    ]
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -36,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/cli": "^7.7.4",
     "@storybook/addon-a11y": "^5.2.6",
     "@storybook/addon-actions": "^5.2.6",
     "@storybook/addon-docs": "^5.2.6",
@@ -44,8 +50,14 @@
     "@storybook/addon-storysource": "^5.2.6",
     "@storybook/addons": "^5.2.6",
     "@storybook/react": "^5.2.6",
+    "auto": "^7.16.3",
     "babel-loader": "^8.0.6",
     "prettier": "^1.19.1",
     "storybook-chromatic": "^3.4.0"
-  }
+  },
+  "description": "Learn Storybook design system",
+  "main": "index.js",
+  "repository": "git@github.com:partypete25/learnstorybook-design-system.git",
+  "author": "Pete Aad <paad@cochlear.com>",
+  "license": "MIT"
 }
