--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "partypete25-learnstorybook-design-system",
   "version": "0.1.1",
   "dependencies": {
+    "@babel/cli": "^7.7.4",
     "polished": "^3.4.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
@@ -11,6 +12,7 @@
   },
   "scripts": {
     "build": "BABEL_ENV=production babel src -d dist",
+    "prepare": "npm run build",
     "build-storybook": "build-storybook -s public",
     "build-storybook-docs": "build-storybook -s public --docs",
     "chromatic": "CHROMATIC_APP_CODE=2b0l8fxtoe3 chromatic",
@@ -41,7 +43,6 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "^7.7.4",
     "@storybook/addon-a11y": "^5.2.6",
     "@storybook/addon-actions": "^5.2.6",
     "@storybook/addon-docs": "^5.2.6",
@@ -56,8 +57,9 @@
     "storybook-chromatic": "^3.4.0"
   },
   "description": "Learn Storybook design system",
-  "main": "index.js",
+  "main": "dist/index.js",
   "repository": "git@github.com:partypete25/learnstorybook-design-system.git",
-  "author": "Pete Aad <paad@cochlear.com>",
-  "license": "MIT"
+  "author": "Pete Aad <partypete25@hotmail.com>",
+  "license": "MIT",
+  "private": false
 }
